--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "shelljs": "^0.8.3"
   }
 }
