--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "express": "^4.16.4",
     "nodemon": "^1.18.6",
     "shelljs": "^0.8.3"
+  },
+  "dependencies": {
+    "node-yaml": "^3.1.1"
   }
 }
