--- a/cloud-resources/k8s/resources/deployments/coder-soa-deployment.yaml
+++ b/cloud-resources/k8s/resources/deployments/coder-soa-deployment.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
         - args:
             - '--apiserver-host=http://172.27.0.12:8080'
-          image: 'coder-soa:latest'
+          image: 'coder-soa:v1'
           imagePullPolicy: IfNotPresent
           name: default-app
           ports:
