--- a/cloud-resources/k8s/resources/deployments/coder-server-deployment.yaml
+++ b/cloud-resources/k8s/resources/deployments/coder-server-deployment.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
         - args:
             - '--apiserver-host=http://172.27.0.12:8080'
-          image: 'coder-server:v1.1.3'
+          image: 'coder-server:1.4'
           imagePullPolicy: IfNotPresent
           name: default-app
           ports:
