--- a/cloud-resources/dockerfiles/Dockerfile-nextjs-web
+++ b/cloud-resources/dockerfiles/Dockerfile-nextjs-web
@@ -2,14 +2,14 @@
 FROM node:8.0.0
 MAINTAINER Joe
 
-RUN mkdir -p /runDIR
-
-ADD web /runDIR/web
-
-
-RUN cd /runDIR/web && pwd && npm install && npm run build
-
+RUN mkdir -p /runDIR/web
 WORKDIR /runDIR/web
+
+#ADD ./release/web /runDIR/web
+COPY --from=nextjscompile /release/web /runDIR/web 
+RUN cd /runDIR/web && npm install && npm run build
+
+
 
 ENV HOST 0.0.0.0
 ENV PORT 3000
