--- a/cloud-resources/k8s/templates/deployment-xci.yaml
+++ b/cloud-resources/k8s/templates/deployment-xci.yaml
@@ -1,15 +1,22 @@
-apiVersion: v1 
-kind: Pod 
-metadata: 
-    name: xci-dind 
-spec: 
-    hostNetwork: true
-    containers: 
-      - name: docker-cmds 
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: xci-web-set
+spec:
+  template:
+    metadata: 
+      name: xci-web
+      namespace: default
+      labels:
+        k8sApp: xci-web 
+    spec: 
+      hostNetwork: true
+      containers: 
+      - name: xci-website-container 
         image: xci:base
         ports:
         - containerPort: 3000
-          hostPort: 3000
+        #  hostPort: 3000
         volumeMounts: 
           - mountPath: /var/run 
             name: docker-sock 
@@ -19,7 +26,7 @@ spec:
             name: kubectl-bin 
           - mountPath: /root/.kube/config 
             name: kubectl-conf 
-    volumes: 
+      volumes: 
       - name: docker-sock 
         hostPath: 
             path: /var/run 
@@ -32,3 +39,17 @@ spec:
       - name: kubectl-conf 
         hostPath: 
             path: /etc/kubernetes/admin.conf
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: xci-web-svc
+  namespace: default
+  labels:
+    k8sApp: xci-web-svc
+spec:
+  selector:
+    k8sApp: xci-web
+  ports:
+    - port: 3000
+      targetPort: 3000
