add   ingress  support

--- a/cloud-resources/k8s/resources/deployments/xci-web-deployment.yaml
+++ b/cloud-resources/k8s/resources/deployments/xci-web-deployment.yaml
@@ -13,10 +13,9 @@ spec:
       hostNetwork: true
       containers: 
       - name: xci-website-container 
-        image: xci:base
+        image: xci-web
         ports:
         - containerPort: 3333
-        #  hostPort: 3000
         volumeMounts: 
           - mountPath: /var/run 
             name: docker-sock 
