add   ingress  support

--- a/cloud-resources/k8s/resources/deployments/xci-web-deployment.yaml
+++ b/cloud-resources/k8s/resources/deployments/xci-web-deployment.yaml
@@ -10,7 +10,7 @@ spec:
       labels:
         k8sApp: xci-web 
     spec: 
-      hostNetwork: true
+      #hostNetwork: true
       containers: 
       - name: xci-website-container 
         image: xci-web
