updated the api server host

--- a/cloud-resources/k8s/templates/web-ingress.yaml
+++ b/cloud-resources/k8s/templates/web-ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: name-ingress
   annotations:
+    nginx.ingress.kubernetes.io/app-root: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
