--- a/cloud-resources/k8s/templates/web-ingress.yaml
+++ b/cloud-resources/k8s/templates/web-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: name-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
