adjust website root router

--- a/cloud-resources/dockerfiles/Dockerfile-nextjs-web.multi
+++ b/cloud-resources/dockerfiles/Dockerfile-nextjs-web.multi
@@ -14,7 +14,8 @@ RUN mkdir -p /runDIR/web
 WORKDIR /runDIR/web
 
 COPY --from=nextjscompile /release/web /runDIR/web 
-RUN cd /runDIR/web && npm install && npm run build
+RUN cd /runDIR/web && npm install
+RUN cd /runDIR/web && npm run build
 
 ENV HOST 0.0.0.0
 ENV PORT 8080
