--- a/cloud-resources/k8s/resources/deployments/xci-web-deployment.yaml
+++ b/cloud-resources/k8s/resources/deployments/xci-web-deployment.yaml
@@ -14,6 +14,7 @@ spec:
       containers: 
       - name: xci-website-container 
         image: xci-web
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3333
         volumeMounts: 
